# Gloubiboulga

./: .gitignore  CMakeLists.txt  Gloubiboulga.jucer  build.md  prompts.txt  readme.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release.yml
Source/: BiquadFilter.cpp  BiquadFilter.h  FormantFilter.h  GlitchVisualizerComponent.cpp  GlitchVisualizerComponent.h  Gloubiboulga.code-workspace  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RandomNormal.h
doc/: testing-logic-pro-au.md
packaging/windows/: installer.nsi
